bridge/base/0-facialemotions-namespace.yaml
#! 0-facialemotions-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: facialemotions
    labels:
        com.docker.compose.project: facialemotions
