bridge/base/mysql-deployment.yaml
#! mysql-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
    namespace: facialemotions
    labels:
        com.docker.compose.project: facialemotions
        com.docker.compose.service: mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: facialemotions
            com.docker.compose.service: mysql
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: facialemotions
                com.docker.compose.service: mysql
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: mysql
                  image: mysql:8.0
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mysql-33060
                      containerPort: 33060
                    - name: mysql-3306
                      containerPort: 3306
                  volumeMounts:
                    - name: var-lib-mysql
                      mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  persistentVolumeClaim:
                    claimName: mysql-mysql-data
