bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: facialemotions
    labels:
        com.docker.compose.project: facialemotions
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: facialemotions
        com.docker.compose.service: app
    ports:
        - name: app-5500
          port: 5500
          protocol: TCP
          targetPort: app-5500

# check if there is at least one published port
